examples/test/testpolicy11210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11210
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key28: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value29
          key16: value13
      podSelector:
        matchLabels:
          key48: value31
          key41: value22
